--- a/templates/frost/css/style_main.css
+++ b/templates/frost/css/style_main.css
@@ -231,7 +231,7 @@ input[type="text"]:focus, textarea:focus, select:focus, input[type="password"]:f
 
 /*## SEARCH MODAL ###################################*/
 .search-modal
-{ background: #EEF1F7; float: left; margin: 0; min-height: 20px; padding: 12px 0px 23px 18px; width: 202px; display: none;}
+{ background: #EEF1F7; float: left; margin: 0; min-height: 20px; padding: 12px 0px 23px 18px; width: 202px;	-moz-border-radius: 6px; -webkit-border-radius: 6px;}
 
 /*## WINTOOLS ########################################*/
 .wintools
